--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="start_button">Начать</string>
+    <string name="start_button">Запустить</string>
     <string name="stop_button">Остановить</string>
     <string name="title_activity_settings">Настройки</string>
     <string name="collector_info">UDP сборщик: %1$s:%2$d</string>
@@ -457,4 +457,12 @@
     <string name="license_limit_reached">Достигнут лимит лицензий для данного unlock token. Приобретите новый token, чтобы сгенерировать больше лицензий</string>
     <string name="qr_code_expired">Срок действия QR кода истек. Сгенерируйте новый QR код и повторите попытку</string>
     <string name="socks5_auth">Аутентификация SOCKS5</string>
+    <string name="mitm_addon_starting">MITM-аддон запускается…</string>
+    <string name="mitm_addon_running">MITM-аддон запущен</string>
+    <string name="decryption_rules">Правила расшифровки</string>
+    <string name="decrypt_action">Расшифровывать…</string>
+    <string name="decryption_rules_help">Эти правила указывают на те соединения, которые необходимо расшифровывать. Правила на основе хостов работают только если найден соответствующий отклик от DNS сервера</string>
+    <string name="dont_decrypt_action">Не расшифровывать…</string>
+    <string name="status_encrypted">Зашифровано</string>
+    <string name="injected">Инжектировано</string>
 </resources>
