--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -374,7 +374,7 @@
     <string name="cert_installed_correctly">Das CA-Zertifikat ist installiert</string>
     <string name="cert_reinstall_required">Das CA-Zertifikat ist nicht installiert, führen Sie den mitm-Einrichtungsassistenten aus</string>
     <string name="cert_exported_now_installed">Zertifikat exportiert, installieren Sie es nun über die Android-Einstellungen</string>
-    <string name="mitm_addon_bad_version">Schlechte PCAPdroid Mitm Addon-Version. Deinstallieren Sie es und versuchen Sie es erneut</string>
+    <string name="mitm_addon_bad_version">Schlechte PCAPdroid Mitm Addon-Version. Bitte installieren Sie Version %1$s und versuchen Sie es erneut</string>
     <string name="mitm_addon_new_version">Das PCAPdroid mitm Addon muss aktualisiert werden</string>
     <string name="overview">Übersicht</string>
     <string name="response">Antwort</string>
