--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -485,4 +485,5 @@
     <string name="pcap_file_not_exists">The specified PCAP file does not exist</string>
     <string name="root_capture_start_failed">Capture start failure. Ensure that the device is rooted with Magisk</string>
     <string name="pcap_read_error">PCAP read error</string>
+    <string name="pcap_file_load_aborted">PCAP file loading aborted</string>
 </resources>
