--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -485,6 +485,7 @@
     <string name="unsupported_pcap_datalink">PCAP file has an unsupported datalink</string>
     <string name="pcap_file_not_exists">The specified PCAP file does not exist</string>
     <string name="root_capture_start_failed">Capture start failure. Ensure that the device is rooted with Magisk</string>
+    <string name="root_capture_pcapd_start_failure">Capture start failure. Make sure you grant root access to PCAPdroid</string>
     <string name="pcap_read_error">PCAP read error</string>
     <string name="pcap_file_load_aborted">PCAP file loading aborted</string>
     <string name="host_resolution_failed">"Could not resolve host %1$s</string>
