--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,7 +35,7 @@
     <string name="source_code">Исходный код</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
-    <string name="vpn_setup_failed">Не удалось настроить VPN</string>
+    <string name="vpn_setup_failed">Не удалось настроить VPN. Убедитесь, что опция Постоянный VPN отключена</string>
     <string name="app_not_found">Не удалось найти приложение %1$s</string>
     <string name="stats">Показатели</string>
     <string name="active_connections">Активные соединения</string>
@@ -199,7 +199,7 @@
     <string name="save_ok">Сохранено</string>
     <string name="loading_apps">Загрузка приложений…</string>
     <string name="file_saved_with_name">Файл сохранен как \"%1$s\"</string>
-    <string name="disconnect_vpn_confirm">Отключиться от активного VPN соединения и продолжить\?</string>
+    <string name="disconnect_vpn_confirm">Продолжение приведёт к отключению от активного VPN</string>
     <string name="copied">Скопировано</string>
     <string name="capture_not_running_status">Захват не производится</string>
     <string name="start_capture_first">Сначала запустите захват траффика</string>
@@ -282,7 +282,7 @@
     <string name="conn_status_active">Активно</string>
     <string name="export_failed">Экспорт не удался</string>
     <string name="not_encrypted">Не зашифровано</string>
-    <string name="payload_truncated">Содержимое сокращено. Включите \"%1$s\" чтобы отображать его полностью</string>
+    <string name="payload_truncated">Содержимое сокращено. Чтобы отобразить его полностью, остановите захват и включите %1$s в настройках PCAPdroid</string>
     <string name="decrypted">Дешифровано</string>
     <string name="decryption">Дешифрование</string>
     <string name="waiting_application_data">Ожидаем данные</string>
@@ -326,7 +326,9 @@
 \nБолее того, приложение позволяет вам экспортировать дамп траффика в виде PCAP, извлекать метаданные и многое другое!</string>
     <string name="vpn_setup_msg">PCAPdroid симулирует VPN чтобы захватывать весь траффик устройства без необходимости в root.
 \n
-\nЧтобы начать захват, вам необходимо принять запрос на включение VPN на следующем экране</string>
+\nЧтобы начать захват, вам необходимо принять запрос на включение VPN на следующем экране
+\n
+\n<b>ПРИМЕЧАНИЕ:</b> чтобы продолжить, отключите любой настроенный Постоянный VPN из настроек Android</string>
     <string name="app_intro_firewall_msg">Со встроенным <a href="%1$s">файрволом</a> вы можете легко заблокировать доступ в интернет отдельным приложениям и доменам
 \n
 \nСкомбинируйте это со встроенной возможностью просматривать траффик и получите идеальный инструмент для защиты своей конфиденциальности</string>
@@ -465,4 +467,21 @@
     <string name="dont_decrypt_action">Не расшифровывать…</string>
     <string name="status_encrypted">Зашифровано</string>
     <string name="injected">Инжектировано</string>
+    <string name="tls_decryption_no_rules_notice">Дешифрование TLS применяется только к соединениям, которые соответствуют настроенным правилам. Вы хотите создать правила дешифрования\?</string>
+    <string name="root_capture_pcapd_start_failure">Не удалось начать захват. Убедитесь, что вы разрешили root-доступ для PCAPdroid</string>
+    <string name="active_vpn_detected">Обнаружен активный VPN</string>
+    <string name="copy_error">Не удаётся записать файл</string>
+    <string name="proxy_host">Прокси хост</string>
+    <string name="pcap_load_in_progress">PCAP файл загружается, пожалуйста подождите</string>
+    <string name="open_pcap_file">Открыть PCAP файл…</string>
+    <string name="decryption_info_no_rule">Это соединение не будет дешифровано. Создайте правило для его дешифрования</string>
+    <string name="host_resolution_failed">Не удалось разрешить хост %1$s</string>
+    <string name="capture_interface_open_error">Не удалось открыть интерфейс захвата</string>
+    <string name="pcap_load_success">PCAP файл загружен</string>
+    <string name="invalid_pcap_file">Некорректный PCAP файл</string>
+    <string name="pcap_file_not_exists">Указанного PCAP файла не существует</string>
+    <string name="pcap_read_error">Ошибка чтения PCAP</string>
+    <string name="pcap_file_load_aborted">Загрузка PCAP файла прервана</string>
+    <string name="root_capture_start_failed">Не удалось начать захват. Убедитесь, что устройство рутовано с помощью Magisk</string>
+    <string name="pcapdroid_trailer_notice">Чтобы отображать фактические приложения вместо \"%1$s\", убедитесь, что вы включили опцию \"%2$s\" перед экспортом PCAP файла</string>
 </resources>
